--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,4 @@ jobs:
         env:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "cicd-hello-world-example" #Must be unique in Heroku
-          heroku_email: ${{HEROKU_EMAIL}}
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
