--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: dfgav1r1a/CICD-hello-world-example@main
+      - uses: dfgav1r1a/CICD-hello-world-example
         env:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "cicd-hello-world-example" #Must be unique in Heroku
