--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@main
       - uses: dfgav1r1a/cicd-hello-world-example@main
         env:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
