--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - uses: dfgav1r1a/cicd-hello-world-example@master
+      - uses: actions/checkout@main
+      - uses: dfgav1r1a/cicd-hello-world-example@main
         env:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "cicd-hello-world-example" #Must be unique in Heroku
